--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "commit": "git-cz",
     "eslint": "npx eslint --fix \"**/*.{js,jsx,html,vue}\"",
     "lint": "npm run prettier && npm run eslint",
-    "prettier": "npx prettier \"**/*.{js,jsx,ts,tsx,html,vue,css,scss,json,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "npx prettier \"**/*.{js,jsx,ts,tsx,html,vue,css,scss,json,md}\""
   },
   "husky": {
     "hooks": {
