--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "url": "git+https://github.com/donniean/proxy.git"
   },
   "license": "MIT",
-  "author": "",
+  "author": "Donnie An",
   "main": "index.js",
   "scripts": {
-    "prettier": "npx prettier \"**/*.{js,ts,jsx,tsx,json,html,vue,css,less,scss,md,yaml}\"",
-    "eslint": "npx eslint --fix \"**/*.{js,jsx,html,vue}\"",
-    "lint": "npm run eslint && npm run prettier",
+    "prettier": "npx prettier \"**/*.{js,json,yaml,md}\"",
+    "eslint": "npx eslint --fix \"**/*.{js}\"",
+    "lint": "npm run prettier && npm run eslint",
     "cspell": "cspell \"**/*\"",
     "commit": "git-cz"
   },
@@ -38,11 +38,11 @@
     "commitizen": "^4.2.1",
     "cspell": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-html": "^6.1.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
