--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prettier": "npx prettier \"**/*.{js,json,yaml,md}\"",
     "eslint": "npx eslint --fix \"**/*.{js}\"",
     "cspell": "cspell \"**/*\"",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
     "commit": "git-cz"
   },
   "config": {
@@ -30,21 +32,21 @@
     "qs": "^6.9.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "babel-eslint": "^10.1.0",
-    "commitizen": "^4.2.1",
-    "cspell": "^4.1.0",
+    "commitizen": "^4.2.3",
+    "cspell": "^5.4.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-html": "^6.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2"
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1"
   }
 }
